--- a/environment.yml
+++ b/environment.yml
@@ -74,4 +74,8 @@ dependencies:
   - wincertstore=0.2=py39haa95532_2
   - winpty=0.4.3=4
   - zipp=3.6.0=pyhd3eb1b0_0
+  - pip:
+    - numpy==1.21.4
+    - pandas==1.3.5
+    - pytz==2021.3
 prefix: C:\Users\nathan.mcneill\anaconda3\envs\stockbot_env
