--- a/environment.yml
+++ b/environment.yml
@@ -75,7 +75,14 @@ dependencies:
   - winpty=0.4.3=4
   - zipp=3.6.0=pyhd3eb1b0_0
   - pip:
+    - charset-normalizer==2.0.9
+    - idna==3.3
+    - lxml==4.7.1
+    - multitasking==0.0.10
     - numpy==1.21.4
     - pandas==1.3.5
     - pytz==2021.3
+    - requests==2.26.0
+    - urllib3==1.26.7
+    - yfinance==0.1.67
 prefix: C:\Users\nathan.mcneill\anaconda3\envs\stockbot_env
