--- a/environment.yml
+++ b/environment.yml
@@ -81,8 +81,8 @@ dependencies:
     - multitasking==0.0.10
     - numpy==1.21.4
     - pandas==1.3.5
+    - pprintpp==0.4.0
     - pytz==2021.3
     - requests==2.26.0
     - urllib3==1.26.7
-    - yfinance==0.1.67
 prefix: C:\Users\nathan.mcneill\anaconda3\envs\stockbot_env
