--- a/environment.yml
+++ b/environment.yml
@@ -76,11 +76,16 @@ dependencies:
   - zipp=3.6.0=pyhd3eb1b0_0
   - pip:
     - charset-normalizer==2.0.9
+    - cycler==0.11.0
+    - fonttools==4.28.5
     - idna==3.3
+    - kiwisolver==1.3.2
     - lxml==4.7.1
+    - matplotlib==3.5.1
     - multitasking==0.0.10
     - numpy==1.21.4
     - pandas==1.3.5
+    - pillow==8.4.0
     - pprintpp==0.4.0
     - pytz==2021.3
     - requests==2.26.0
